--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-link">
   <div class="navbar-brand">
-    <a class="navbar-item">
+    <a class="navbar-item" href="/{{ site.baseurl }}">
       INSERT LOGO
     </a>
     <div class="navbar-burger" data-target="navbar">
@@ -12,22 +12,19 @@
 
   <div id="navbar" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="https://bulma.io/">
+      <a class="navbar-item" href="/{{ site.baseurl }}">
         Home
       </a>
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
+        <span class="navbar-link">
           Categories
-        </a>
+        </span>
         <div class="navbar-dropdown">
-          <a class="navbar-item">
-            Article
+          <a class="navbar-item" href="{{ site.baseurl }}{% link _category/articles.md %}">
+            Articles
           </a>
-          <a class="navbar-item">
-            Tutorial
-          </a>
-          <a class="navbar-item">
-            ???
+          <a class="navbar-item" href="{{ site.baseurl }}{% link _category/tutorials.md %}">
+            Tutorials
           </a>
         </div>
       </div>
