--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-link">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/{{ site.baseurl }}">
+    <a class="navbar-item" href="{{ site.baseurl }}">
       INSERT LOGO
     </a>
     <div class="navbar-burger" data-target="navbar">
@@ -12,7 +12,7 @@
 
   <div id="navbar" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/{{ site.baseurl }}">
+      <a class="navbar-item" href="{{ site.baseurl }}">
         Home
       </a>
       <div class="navbar-item has-dropdown is-hoverable">
