--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -4,3 +4,36 @@
 .post-list__content {
     color: black;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex: 1;
+}
+
+article.post {
+  margin: 1rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #E6EAEE;
+}
+article.post:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+#post-content code {
+  text-align: left;
+}
+
+.feather {
+  width: 24px;
+  height: 24px;
+  stroke: currentColor;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+}
