--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,34 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
 
-{{ page.content }}
+
+<section class="section">
+  <div class="container">
+    <div class="content">
+      <h1 class="title is-size-1 has-text-centered">
+        {{ page.title }}
+      </h1>
+      <p class="subtitle has-text-grey has-text-centered">
+        {% if post.author != "" %}
+            by {{ page.author }}
+        {% endif %}
+        {{ page.date | date_to_string }}
+      </p>
+      
+      <div id="post-content">
+        {{ page.content }}
+      </div>
+
+      <hr>
+      <div class="tags">
+        <p>
+          Tags: &nbsp;
+          {% for tag in page.tags %}
+          <a href="{{ site.baseurl }}{% link tags.html %}#{{ tag }}" class="tag is-medium is-link">{{ tag }}</a>
+          {% endfor %}
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
