--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,9 +18,11 @@ layout: default
               <h3>{{ post.title }}</h3>
               <p>
                 {{ post.excerpt }}<br>
-                {{ post.categories.first | capitalize }} by <a href="#">@jsmith</a> &nbsp;
+                {{ post.categories.first | capitalize }} 
+                  {% if post.author %} by {{ post.author }} {% endif %}
+                &nbsp;
                 {% for tag in post.tags %}
-                <span class="tag">{{ tag }}</span>
+                <a href="{{ site.baseurl }}{% link tags.html %}#{{ tag }}" class="tag is-link">{{ tag }}</a>
                 {% endfor %}
               </p>
             </div>
