Add viewport reset tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <!-- styles from CDNs -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- styles from /assets/style -->
   <link rel="stylesheet" href="{{ '/assets/style/monokai.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/style/main.css' | relative_url }}">
