--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,7 +1,36 @@
 ---
 layout: default
 ---
-<h2>All {{ page.arg }}s:</h2>
-{% for post in site.categories[page.arg] %}
-    <a href="{{ post.url | relative_url }}"><h1>{{ post.title }}</h1></a>
-{% endfor %}
+
+<section class="section">
+  <div class="container">
+    <h2 class="title">All {{ page.arg }}s</h2>
+    <div class="box content">
+      {% for post in site.categories[page.arg] %}
+      <div class="media post-list__content">
+        <a href="{{ post.url | relative_url }}" class="post-list__content">
+          <!-- <figure class=" column">
+            <p class="image is-128x128">
+              <img src="https://bulma.io/images/placeholders/128x128.png">
+            </p>
+          </figure> -->
+          <div class="media-content">
+            <div class="content">
+              <h3>{{ post.title }}</h3>
+              <p>
+                {{ post.excerpt | strip_html }}<br><br>
+                {{ post.categories.first | capitalize }} 
+                  {% if post.author %} by {{ post.author }} {% endif %}
+                &nbsp;
+                {% for tag in post.tags %}
+                <a href="{{ site.baseurl }}{% link tags.html %}#{{ tag }}" class="tag is-link">{{ tag }}</a>
+                {% endfor %}
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
