--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,21 +6,21 @@ layout: default
   <div class="container">
     <div class="box content">
       {% for post in site.posts %}
-      <article class="media">
+      <div class="media post-list__content">
         <a href="{{ post.url | relative_url }}" class="post-list__content">
-          <figure class="media-left">
+          <!-- <figure class=" column">
             <p class="image is-128x128">
               <img src="https://bulma.io/images/placeholders/128x128.png">
             </p>
-          </figure>
+          </figure> -->
           <div class="media-content">
             <div class="content">
               <h3>{{ post.title }}</h3>
               <p>
-                {{ post.excerpt }}<br>
+                {{ post.excerpt | strip_html }}<br><br>
                 {{ post.categories.first | capitalize }} 
                   {% if post.author %} by {{ post.author }} {% endif %}
-                &nbsp;
+                &nbsp;  <!-- non-breaking space -->
                 {% for tag in post.tags %}
                 <a href="{{ site.baseurl }}{% link tags.html %}#{{ tag }}" class="tag is-link">{{ tag }}</a>
                 {% endfor %}
@@ -28,7 +28,7 @@ layout: default
             </div>
           </div>
         </a>
-      </article>
+      </div>
       {% endfor %}
     </div>
   </div>
