--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 <section class="section">
   <div class="container">
-    <div class="content">
+    <article class="content">
       <h1 class="title is-size-1 has-text-centered">
         {{ page.title }}
       </h1>
@@ -31,6 +31,6 @@ layout: default
           {% endfor %}
         </p>
       </div>
-    </div>
+    </article>
   </div>
 </section>
