Make some changes to tags.
Change styling and organisation in tags page

Tags now sorted alphabetically.

Change tags to lowercase

Add some notes for contributors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
           </a>
         </div>
       </div>
+      <a class="navbar-item" href="{{ site.baseurl}}{% link tags.html %}">Tags</a>
     </div>
 
     <div class="navbar-end">
