--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
             by {{ page.author }}
           <br>
         {% endif %}
-        {{ page.date | date_to_string }}
+        <span class="post-date">{{ page.date | date_to_string }}</span>
       </p>
       
       <div id="post-content">
