Make page listing easier to read for small devices
When the viewport is less than 600px (large-ish phone), the listing orientates
vertically instead of horizontally (the text below the image).

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -42,3 +42,10 @@ article.post:last-child {
 .post-date {
   color: #aaaaaa;
 }
+
+@media screen and (max-width: 600px) {
+  .media {
+    flex-direction: column;
+    align-items: center;
+  }
+}
