--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-link">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.baseurl }}/">
-      Smart DHS
+      {{ site.title }}
     </a>
     <div class="navbar-burger" data-target="navbar">
       <span></span>
