--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,7 @@
-
+<footer class="footer">
+    <div class="content has-text-centered">
+        <p>Contact us at {{ site.contact_email }}.</p>
+        <p>Want to contribute to this page? Check out <a href="{{ site.github.repository_url }}">this repository's GitHub page!</a></p>
+    </div>
+</footer>
 <script type="text/javascript" src="{{ '/assets/js/main.js' | relative_url }}"></script>
