--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
   <!-- styles from /assets/style -->
   <link rel="stylesheet" href="{{ '/assets/style/monokai.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/style/main.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/style/quiz.css' | relative_url }}">
 </head>
