Add pushing to Firebase database

--- a/_includes/quiz.html
+++ b/_includes/quiz.html
@@ -1,5 +1,4 @@
 <div class="quiz">
-
     <div id="quiz__completed"></div>
     <!-- anyone looking for the answers in here: https://bit.ly/2hDYrHq -->
     <div id="quiz__in-progress">
@@ -13,7 +12,7 @@
                     {% endfor %}
                 {% else %}
                     <input class="quiz__answer quiz__answer--openend" type="text" placeholder="Your answer here...">
-                    <div class="quiz__answer">Submit</div>
+                    <div class="quiz__answer quiz__answer--openend-submit">Submit</div>
                 {% endif %}
             </div>
         </div>
@@ -26,11 +25,23 @@
     </div>
 </div>
 
+
+
+<!-- Base Firebase app script -->
+<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
+<!-- Additional services -->
+<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
+
+
 <script type="text/javascript">
 // sorry for the shitty dom traversal
 // i was too lazy to include a view framework
 
-let score = 0
+let result = {
+    openEndedResponses: [],
+    score: 0
+};
 
 // fake jquery
 function $(selector) {
@@ -43,43 +54,91 @@ $('#quiz__completed').addEventListener('click', function(e) {
     e.preventDefault();
 }, true); // true: execute the handler before propagating
 
-// given a .quiz__answer element, check if answer is correct, set appropriate color
+function disableQuestion(answerElement) {
+    $("#quiz__completed").appendChild(answerElement.parentNode.parentNode);
+}
+
+/*=================================================
+=            Multiple-choice questions            =
+=================================================*/
+// given a MULTIPLE CHOICE .quiz__answer element, check if answer is correct and set appropriate color
 // also, if wrong, look for the correct answer and highlight that
 function checkAnswer(answerElement) {
     // note that data attributes return strings.
     if (answerElement.dataset.correct === "true") {
-        answerElement.classList.add('quiz__answer--correct')
-        score++
+        answerElement.classList.add('quiz__answer--correct');
+        result.score++;
     } else {
-        answerElement.classList.add('quiz__answer--wrong')
+        answerElement.classList.add('quiz__answer--wrong');
         // look through siblings and look for correct one
-        let siblings = answerElement.parentNode.getElementsByTagName('div')
+        let siblings = answerElement.parentNode.getElementsByTagName('div');
 
         for (let i = 0; i < siblings.length; i++) {
             if (siblings[i].dataset.correct === "true") {
-                siblings[i].classList.add('quiz__answer--correct')
+                siblings[i].classList.add('quiz__answer--correct');
             }
         }
     }
 }
 
-function disableQuestion(answerElement) {
-    $("#quiz__completed").appendChild(answerElement.parentNode.parentNode)
-}
-
-// handler for when an answer is selected.
+// handler for when an MCQ answer is selected.
 function handleClick(element) {
     checkAnswer(element);
     setTimeout(function() {
         disableQuestion(element);
-        if ($('#quiz__in-progress').children.length === 0) {
-            $('#quiz__finale').style.display = 'block';
-            $('#quiz__finale__score').textContent = score
-        } 
+        finishUp();
     }, 1000);
 }
 
+$('.quiz__answer').addEventListener('click', function(e) {
+    handleClick(e.target)    
+}); 
 
+/*============================================
+=            Open-ended questions            =
+============================================*/
+// given an OPEN ENDED .quiz__answer--openend input, add an answer object to result,
+// then disable the question
+function handleOpenQuestion(answerElement){
+    let answer = answerElement.value;
+    // the question h2 is answerElement's parent's sibling.
+    let question = answerElement.parentNode.parentNode.getElementsByTagName('h2')[0].textContent;
+    result.openEndedResponses.push({ question: question, answer: answer });
+    disableQuestion(answerElement);
+    finishUp();
+    if ($('#quiz__in-progress').children.length === 0) {
+        $('#quiz__finale').style.display = 'block';
+        $('#quiz__finale__score').textContent = result.score;
+    } 
+}
+
+// handle clicking "submit"
+$('.quiz__answer--openend-submit').addEventListener('click', function(e) {
+    // the input element is siblings with the submit button
+    let answerElement = e.target.parentNode.getElementsByTagName('input')[0];
+    handleOpenQuestion(answerElement);
+});
+
+// handle pressing enter on the text box
+$('.quiz__answer--openend').addEventListener('keyup', function(e) {
+    if (e.keyCode == 13) { handleOpenQuestion(e.target); }
+});
+
+/*================================================
+=            After everything is done            =
+================================================*/
+// handle showing scores and pushing to db after finishing the quiz.
+function finishUp() {
+    if ($('#quiz__in-progress').children.length === 0) {
+        $('#quiz__finale').style.display = 'block';
+        $('#quiz__finale__score').textContent = result.score;
+
+        // generate the ref to keep results in from the url
+        let keyToPush = window.location.pathname.replace(/^\/smarticc\//, "").replace(/\//g, "-")
+        let ref = firebase.database().ref(keyToPush);
+        ref.push(result);
+    }
+}
 
 
 </script>
