--- a/_includes/quiz.html
+++ b/_includes/quiz.html
@@ -1,4 +1,9 @@
-<div class="quiz">
+<div id="auth">
+    <h2>Before doing the quiz, please sign in with your DHS account.</h2>
+    <div id="auth__signin-button">Sign In</div>
+</div>
+
+<div id="quiz" class="quiz hidden">
     <div id="quiz__completed"></div>
     <!-- anyone looking for the answers in here: https://bit.ly/2hDYrHq -->
     <div id="quiz__in-progress">
@@ -21,7 +26,7 @@
 
     <div id="quiz__finale">
         <h2>You've finished the quiz!</h2>
-        <p>You scored <span id="quiz__finale__score"></span> out of {{ include.questions | size }}.</p>
+        <p>You scored <span id="quiz__finale__score"></span> out of {{ include.questions | where_exp: "question", "question.answer" | size }}.</p>
     </div>
 </div>
 
@@ -33,14 +38,54 @@
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
 
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBB5npGlGXW_pY3Rs3PMwaDXcYoRCfEC3s",
+    authDomain: "smarticc-quiz.firebaseapp.com",
+    databaseURL: "https://smarticc-quiz.firebaseio.com",
+    projectId: "smarticc-quiz",
+    storageBucket: "smarticc-quiz.appspot.com",
+    messagingSenderId: "450630087576"
+  };
+  firebase.initializeApp(config);
+</script>
 
 <script type="text/javascript">
+/*======================================
+=            Authentication            =
+========================================*/
+let provider = new firebase.auth.GoogleAuthProvider();
+let user = {}
+
+$("#auth__signin-button").addEventListener('click', function(e) {
+    e.target.textContent = "Loading..."
+    firebase.auth().signInWithRedirect(provider);
+});
+
+firebase.auth().getRedirectResult().then(function(res) {
+    user = res.user;
+    if (res.user) {
+        if (res.user.email.match(/@dhs.sg$/)) {
+            $('#quiz').classList.remove("hidden");
+            $('#auth').classList.add("hidden");
+            $('#quiz').scrollIntoView();
+        } else {
+            $('#auth h2').textContent = "Please use your DHS account to sign in again."
+            $("#auth").scrollIntoView();
+        }
+    }
+})
+
+
 // sorry for the shitty dom traversal
 // i was too lazy to include a view framework
 
 let result = {
     openEndedResponses: [],
-    score: 0
+    score: 0,
+    email: "",
+    name: ""
 };
 
 // fake jquery
@@ -58,9 +103,7 @@ function disableQuestion(answerElement) {
     $("#quiz__completed").appendChild(answerElement.parentNode.parentNode);
 }
 
-/*=================================================
-=            Multiple-choice questions            =
-=================================================*/
+/*----------  MCQs  ----------*/
 // given a MULTIPLE CHOICE .quiz__answer element, check if answer is correct and set appropriate color
 // also, if wrong, look for the correct answer and highlight that
 function checkAnswer(answerElement) {
@@ -94,9 +137,8 @@ $('.quiz__answer').addEventListener('click', function(e) {
     handleClick(e.target)    
 }); 
 
-/*============================================
-=            Open-ended questions            =
-============================================*/
+/*----------  Open-ended  ----------*/
+
 // given an OPEN ENDED .quiz__answer--openend input, add an answer object to result,
 // then disable the question
 function handleOpenQuestion(answerElement){
@@ -132,6 +174,10 @@ function finishUp() {
     if ($('#quiz__in-progress').children.length === 0) {
         $('#quiz__finale').style.display = 'block';
         $('#quiz__finale__score').textContent = result.score;
+
+        // gather name and email for record
+        result.email = user.email;
+        result.name = user.displayName;
 
         // generate the ref to keep results in from the url
         let keyToPush = window.location.pathname.replace(/^\/smarticc\//, "").replace(/\//g, "-")
